# BaldurGate3Autosaver

./: .gitignore  README.md  build.bat  main.py  pyproject.toml
.github/workflows/: release.yaml
