[tool.poetry]
name = "autosave1"
version = "0.1.0"
description = ""
authors = ["Gabriel Cyr <gabriel_cyr@iboxis.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pynput = "^1.7.6"
pywin32 = "^306"
pyinstaller = "^5.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
